--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -2,39 +2,38 @@ version: '3.8'
 
 services:
   test-db:
-    image: postgres:16-alpine
     container_name: chirp-test-db
+    image: postgres:16
     environment:
-      POSTGRES_DB: chirp_test
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: chirp_test
     ports:
       - '5433:5432'
     tmpfs:
       - /var/lib/postgresql/data
 
   test-app:
+    container_name: chirp-test-app
     build:
       context: .
-      dockerfile: Dockerfile
-    container_name: chirp-test-app
-    environment:
-      NODE_ENV: test
-      TEST_DB_HOST: test-db
-      TEST_DB_PORT: 5432
-      TEST_DB_NAME: chirp_test
-      TEST_DB_USER: postgres
-      TEST_DB_PASSWORD: postgres
+      target: development
     volumes:
       - .:/usr/src/app
       - /usr/src/app/node_modules
-    depends_on:
-      - test-db
     command: >
       sh -c "
         while ! nc -z test-db 5432; do
           echo 'Waiting for database to be ready...'
           sleep 1
         done
-        npm run test:e2e
-      "
+        npx mikro-orm migration:up && npm test"
+    environment:
+      NODE_ENV: test
+      TEST_DB_HOST: test-db
+      TEST_DB_PORT: 5432
+      TEST_DB_USER: postgres
+      TEST_DB_PASSWORD: postgres
+      TEST_DB_NAME: chirp_test
+    depends_on:
+      - test-db
