--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "migration:down": "npx mikro-orm migration:down"
   },
   "dependencies": {
-    "@mikro-orm/cli": "^5.9.7",
     "@mikro-orm/core": "^5.9.7",
     "@mikro-orm/migrations": "^5.9.7",
     "@mikro-orm/nestjs": "^5.2.3",
@@ -39,16 +38,17 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
+    "@mikro-orm/cli": "^5.9.7",
     "@nestjs/cli": "^10.3.2",
     "@nestjs/schematics": "^10.1.1",
     "@nestjs/testing": "^10.3.3",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.11.19",
+    "@types/node": "^20.11.24",
     "@types/supertest": "^6.0.2",
-    "@typescript-eslint/eslint-plugin": "^7.0.1",
-    "@typescript-eslint/parser": "^7.0.1",
-    "eslint": "^8.56.0",
+    "@typescript-eslint/eslint-plugin": "^7.1.1",
+    "@typescript-eslint/parser": "^7.1.1",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "jest": "^29.7.0",
@@ -67,7 +67,7 @@
       "json",
       "ts"
     ],
-    "rootDir": "src",
+    "rootDir": ".",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
@@ -75,8 +75,12 @@
     "collectCoverageFrom": [
       "**/*.(t|j)s"
     ],
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "coverageDirectory": "./coverage",
+    "testEnvironment": "node",
+    "roots": [
+      "<rootDir>/src/",
+      "<rootDir>/test/"
+    ]
   },
   "mikro-orm": {
     "useTsNode": true,
