--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
     "migration:create": "npx mikro-orm migration:create",
     "migration:up": "npx mikro-orm migration:up",
     "migration:down": "npx mikro-orm migration:down"
@@ -27,6 +26,7 @@
     "@mikro-orm/migrations": "^5.9.7",
     "@mikro-orm/nestjs": "^5.2.3",
     "@mikro-orm/postgresql": "^5.9.7",
+    "@mikro-orm/reflection": "^5.9.7",
     "@nestjs/common": "^10.3.3",
     "@nestjs/core": "^10.3.3",
     "@nestjs/mapped-types": "^2.0.5",
@@ -80,7 +80,16 @@
     "roots": [
       "<rootDir>/src/",
       "<rootDir>/test/"
-    ]
+    ],
+    "globalSetup": "<rootDir>/test/global-setup.ts",
+    "moduleNameMapper": {
+      "^@/(.*)$": "<rootDir>/src/$1"
+    },
+    "globals": {
+      "ts-jest": {
+        "tsconfig": "tsconfig.json"
+      }
+    }
   },
   "mikro-orm": {
     "useTsNode": true,
