feat: Implement comprehensive parallel testing infrastructure - Complete parallel testing foundation with worker-aware configuration - All 64 tests passing consistently with clean isolation - Global setup/teardown lifecycle management - Enhanced database utilities and Jest configuration - Professional logging with worker identification - Ready for multi-worker parallel execution

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:debug": "DEBUG_TEST_CONFIG=true DEBUG_TESTS=true jest",
+    "test:parallel": "TEST_PARALLEL=true jest --maxWorkers=50%",
     "migration:create": "npx mikro-orm migration:create",
     "migration:up": "npx mikro-orm migration:up",
     "migration:down": "npx mikro-orm migration:down"
@@ -60,36 +61,6 @@
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.3.3"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": ".",
-    "testRegex": ".*\\.spec\\.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
-    "coverageDirectory": "./coverage",
-    "testEnvironment": "node",
-    "roots": [
-      "<rootDir>/src/",
-      "<rootDir>/test/"
-    ],
-    "moduleNameMapper": {
-      "^@/(.*)$": "<rootDir>/src/$1"
-    },
-    "globals": {
-      "ts-jest": {
-        "tsconfig": "tsconfig.json"
-      }
-    },
-    "maxWorkers": 1
   },
   "mikro-orm": {
     "useTsNode": true,
