--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
     "@mikro-orm/cli": "^5.9.7",
+    "@mikro-orm/seeder": "^5.9.7",
     "@nestjs/cli": "^10.3.2",
     "@nestjs/schematics": "^10.1.1",
     "@nestjs/testing": "^10.3.3",
